<resources>
    <string name="app_name">Exe1PAM</string>
    <string name="welcome">Welcome in Todo App</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="signinbtn">SIGN-IN</string>
    <string name="insertname">Masukkan Email</string>
    <string name="insertpass">Masukkan Password</string>
    <string name="successinsert">Berhasil</string>
    <string name="successtask">Task</string>
    <string name="successjenis">Jenis Task</string>
    <string name="successtime">Lama Task</string>
    <string name="pleaseinsert">Task Harus Diisi</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="sregister">Register</string>
    <string name="semail">Email</string>
    <string name="srepass">RePassword</string>
    <string name="inputmail">Masukkan Email</string>
    <string name="newtodo">New Todo App?</string>
    <string name="thisname">username</string>
    <string name="judultask">Task</string>
    <string name="taskinsert">Masukkan Task</string>
    <string name="juduljenistask">Jenis Task</string>
    <string name="jenistask">Masukkan Jenis Task</string>
    <string name="timetask">Time Task</string>
    <string name="lamatask">Masukkan Lama Task</string>
    <string name="welcomepeople">Selamat Datang</string>
</resources>