<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="105dp"
        android:layout_height="0dp"
        android:layout_marginTop="125dp"
        android:layout_marginBottom="113dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/eduser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/clipboard"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/eduser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="61dp"
        android:ems="10"
        android:hint="@string/insertname"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#673AB7"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="352dp"
        android:layout_marginRight="29dp"
        android:layout_marginBottom="184dp"
        android:text="@string/username"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/edCreateacc"
        app:layout_constraintEnd_toStartOf="@+id/eduser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:layout_marginBottom="278dp"
        android:ems="10"
        android:hint="@string/insertpass"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:password="true"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/eduser"
        app:layout_constraintTop_toBottomOf="@+id/eduser" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="67dp"
        android:layout_height="26dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="294dp"
        android:text="@string/password"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edpassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btsignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="35dp"
        android:text="@string/signinbtn"
        app:layout_constraintStart_toStartOf="@+id/edpassword"
        app:layout_constraintTop_toBottomOf="@+id/edpassword" />

    <TextView
        android:id="@+id/edCreateacc"
        android:layout_width="195dp"
        android:layout_height="0dp"
        android:layout_marginBottom="143dp"
        android:text="@string/newtodo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnRegister"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginBottom="120dp"
        android:text="@string/sregister"
        android:textColor="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btsignin"
        app:layout_constraintTop_toBottomOf="@+id/eduser"
        app:layout_constraintVertical_bias="0.973" />

</androidx.constraintlayout.widget.ConstraintLayout>